[package]
name = "diglett"
version = "0.1.0"
authors = ["psinghal20 <psinghal20@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.4.3"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
